fixed values hover prop

--- a/css/index.css
+++ b/css/index.css
@@ -183,6 +183,10 @@
   cursor: pointer;
 }
 
+.value:hover {
+  color: white;
+}
+
 .value_container {
   font-family: "Aachen";
   background-color: #FFCC00;
