changed banner text, set margin 0 auto

--- a/css/index.css
+++ b/css/index.css
@@ -53,7 +53,7 @@
   color: white;
   font-size: 1em;
   line-height: 1.5em;
-  font-family: "RobotoThin", "Arial", sans-serif;
+  font-family: "RobotoLight", "Arial", sans-serif;
 }
 
 .btn_hello {
