--- a/css/main.css
+++ b/css/main.css
@@ -37,12 +37,14 @@ b {
 html {
     font-size: 1em;
     font-family: "HelveticaLt", "Arial", sans-serif;
+
 }
 
 body {
   background-color: #fff;
   padding: 0px 24px;
   width: 1200px;
+  margin: 0 auto;
 }
 
 /*
@@ -316,6 +318,7 @@ textarea {
 
 .header {
   height: 80px;
+  overflow: hidden;
 }
 
 .header .menu {
@@ -324,6 +327,7 @@ textarea {
   padding: 25px 30px;
   background-color: #FFCC00;
   cursor: pointer;
+  overflow: hidden;
 }
 
 .logo_can {
