--- a/css/main.css
+++ b/css/main.css
@@ -43,8 +43,8 @@ html {
 body {
   background-color: #fff;
   padding: 0px 24px;
-  width: 1366px;
-  margin: 0 auto;
+  /*width: 1366px;*/
+  /*margin: 0 auto;*/
 }
 
 /*
