--- a/css/main.css
+++ b/css/main.css
@@ -26,8 +26,8 @@
  }
 
  @font-face {
-   font-family: "Proxima";
-   src: url("fonts/ProximaNova-Bold.ttf");
+   font-family: "AachenBoldPlain";
+   src: url("fonts/AachenBoldPlain.ttf");
  }
 
 b {
@@ -42,8 +42,8 @@ html {
 
 body {
   background-color: #fff;
-  padding: 0px 24px;
-  width: 1366px;
+  width: 100%;
+  box-sizing: border-box;
   margin: 0 auto;
 }
 
@@ -484,6 +484,7 @@ textarea {
 /** TREE **/
 .tree {
   overflow: auto;
+  padding-top: 20px;
   margin: 0 0 20px 0;
   font-size: 0.8em;
 }
@@ -494,6 +495,7 @@ textarea {
   float: left;
   padding: 10px;
   box-sizing: border-box;
+  position: relative;
 }
 
 .path_label {
@@ -535,20 +537,16 @@ textarea {
 }
 
 .role {
-  overflow: auto;
-  border: 1px solid #eee;
   cursor: pointer;
-}
-
-.role:hover {
-  background-color: #f8f8f8;
 }
 
 .role .label {
   height: 60px;
   width: 70%;
   float: left;
-  padding: 15px 10px;
+  padding-left: 10px;
+  display: table-cell;
+  vertical-align: middle;
   box-sizing: border-box;
   font-family: "Roboto";
 }
@@ -557,14 +555,22 @@ textarea {
   text-align: center;
   width: 30%;
   height: 60px;
-  display: flex;
-  justify-content: center;
+  /*display: table-cell;*/
+  /*vertical-align: middle;*/
   float: left;
   box-sizing: border-box;
+  white-space: nowrap;
 }
 
 .role .icon > img {
-  align-self: center;
+  /*display: inline-block;
+  vertical-align: middle;*/
+}
+
+.helper {
+    display: inline-block;
+    height: 100%;
+    vertical-align: middle;
 }
 
 .gold {
@@ -577,32 +583,43 @@ textarea {
 
 .circle_container {
   width: 100%;
+  overflow: auto;
   box-sizing: border-box;
-  display: flex;
-  justify-content: center;
+  /*display: flex;*/
+  /*display: inline-block;*/
+  /*justify-content: center;*/
   cursor: pointer;
-}
-
-.circle:hover {
-  background-color: #f8f8f8;
+  text-align: center;
+  position: relative;
+  /*overflow: auto;*/
 }
 
 .circle {
   padding: 10px;
-  display: flex;
-  justify-content: center;
-  align-self: center;
+  /*display: flex;*/
+  /*display: table-cell;*/
+  /*display: inline-block;*/
+  margin: 0 auto;
+  /*justify-content: center;*/
+  /*align-self: center;*/
+  vertical-align: middle;
   background-color: #eee;
-  box-sizing: border-box;
-  box-shadow: 0 2px 5px gray;
+  /*box-sizing: border-box;*/
+  /*box-shadow: 0 2px 5px gray;*/
   border-radius: 300px;
   height: 100px;
   width: 100px;
   text-align: center;
+  white-space: nowrap;
+  /*word-wrap: break-word;*/
+}
+
+.circle:hover {
+  background-color: #FC0;
 }
 
 .circle > div {
-  align-self: center;
+  /*align-self: center;*/
   font-family: "Roboto";
 }
 
@@ -622,4 +639,24 @@ textarea {
   padding: 0 20px;
   box-sizing: border-box;
   font-family: "RobotoThin";
+}
+
+.table-role {
+  width: 100%;
+}
+
+.table-role tbody tr td {
+  border-spacing: 0px;
+  border: 1px solid #eee;
+}
+
+.td-icon {
+  padding: 20px;
+  text-align: center;
+  width: 30%;
+}
+
+.td-text {
+  width: 70%;
+  padding: 0px 10px;
 }
