--- a/css/main.css
+++ b/css/main.css
@@ -358,6 +358,50 @@ textarea {
   padding: 0 12%;
 }
 
+/* The Modal (background) */
+.modal {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
+
+/* Modal Content/Box */
+.modal-content {
+  overflow: auto;
+    background-color: #fefefe;
+    margin: auto; /* 15% from the top and centered */
+    padding: 20px;
+    border: 1px solid #888;
+    height: 80%;
+    width: 80%; /* Could be more or less, depending on screen size */
+}
+
+/* The Close Button */
+.close {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+}
+
+/*.modal-faq {
+  display: none;
+}
+
 .modal {
   position: fixed;
   display: -ms-flexbox;
@@ -367,7 +411,6 @@ textarea {
   left: 0;
   width: 100%;
   height: 100%;
-  /*padding: 20px;*/
   box-sizing: border-box;
   background-color: rgba(0, 0, 0, 0.9);
 }
@@ -376,7 +419,6 @@ textarea {
   width: inherit;
   height: inherit;
   overflow: auto;
-  /*padding: 20px;*/
   box-sizing: border-box;
   background-color: red;
   z-index: 3;
@@ -432,8 +474,6 @@ textarea {
 
 .modal .content .description .purpose {
   width: 80%;
-  /*overflow: auto;
-  height: 20%;*/
   float: left;
   border-right: 1px solid #ccc;
   box-sizing: border-box;
@@ -450,7 +490,7 @@ textarea {
   float: left;
   padding: 10px 10px 0 10px;
   box-sizing: border-box;
-}
+}*/
 
 .key_responsibilities {
   padding-left: 20px;
