--- a/css/index.css
+++ b/css/index.css
@@ -46,14 +46,30 @@
   box-sizing: border-box;
 }
 
+.banner_back {
+  opacity: 0.5;
+  cursor: pointer;
+  float: left;
+  height: 60px;
+  margin-right: 10px;
+  display: none;
+}
+
+.banner_back:hover {
+  opacity: 1;
+}
+
 .banner_title1 {
   color: white;
   font-size: 3.5em;
   line-height: 1em;
   font-family: "RobotoThin", sans-serif;
+  height: 60px;
+  line-height: 60px;
 }
 
 .banner_title2 {
+  clear: both;
   width: 60%;
   color: white;
   font-size: 1.2em;
