--- a/css/main.css
+++ b/css/main.css
@@ -430,7 +430,16 @@ textarea {
 
 .col {
   min-height: 100px;
-  width: 20%;
+  width: 22%;
+  float: left;
+  padding: 10px;
+  box-sizing: border-box;
+  position: relative;
+}
+
+.col_end {
+  min-height: 100px;
+  width: 17%;
   float: left;
   padding: 10px;
   box-sizing: border-box;
@@ -496,9 +505,9 @@ textarea {
   height: 60px;
   /*display: table-cell;*/
   /*vertical-align: middle;*/
-  float: left;
+  /*float: left;*/
   box-sizing: border-box;
-  white-space: nowrap;
+  /*white-space: nowrap;*/
 }
 
 .role .icon > img {
@@ -534,23 +543,28 @@ textarea {
 }
 
 .circle {
-  padding: 10px;
+  /*padding: 10px;*/
   /*display: flex;*/
   /*display: table-cell;*/
-  /*display: inline-block;*/
-  margin: 0 auto;
+  display: inline-block;
+  /*margin: 0 auto;*/
   /*justify-content: center;*/
   /*align-self: center;*/
   vertical-align: middle;
   background-color: #eee;
-  /*box-sizing: border-box;*/
+  box-sizing: border-box;
   /*box-shadow: 0 2px 5px gray;*/
-  border-radius: 300px;
-  height: 100px;
-  width: 100px;
+  border-radius: 5px;
+  /*height: 100px;*/
+  padding: 30px 20px;
+  width: 100%;
   text-align: center;
-  white-space: nowrap;
+  /*white-space: nowrap;*/
   /*word-wrap: break-word;*/
+}
+
+.role {
+  width: 100%;
 }
 
 .circle:hover {
@@ -568,7 +582,7 @@ textarea {
 }
 
 .mid_spacer {
-  height: 200px;
+  height: 300px;
   width: 100%;
 }
 
