--- a/css/main.css
+++ b/css/main.css
@@ -235,6 +235,7 @@ textarea {
        (min-resolution: 1.25dppx),
        (min-resolution: 120dpi) {
     /* Style adjustments for high resolution devices */
+    font-size: 1.2em;
 }
 
 /* ==========================================================================
@@ -368,14 +369,15 @@ textarea {
     height: 100%; /* Full height */
     overflow: auto; /* Enable scroll if needed */
     background-color: rgb(0,0,0); /* Fallback color */
-    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+    background-color: rgba(0,0,0,0.8); /* Black w/ opacity */
 }
 
 .modal-content {
+  position: relative;
   overflow: auto;
     background-color: #fefefe;
     margin: 5% auto; /* 15% from the top and centered */
-    padding: 15px;
+    padding: 45px 15px 15px 15px ;
     border: 1px solid #888;
     /*height: 80%;*/
     width: 80%; /* Could be more or less, depending on screen size */
@@ -389,6 +391,10 @@ textarea {
 .icon_close {
   float: right;
   cursor: pointer;
+  position: absolute;
+  top: 15px;
+  right: 15px;
+  z-index: 999;
 }
 
 .key_responsibilities {
@@ -614,4 +620,51 @@ textarea {
   width: 70%;
   padding: 0px 10px;
   font-family: "Roboto";
+}
+
+#generic {
+  font-family: "RobotoLight";
+}
+
+.job-banner {
+  background-image: url('../img/executive_consultant.png');
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  height: 100px;
+  padding: 20px;
+  color: white;
+  font-family: "RobotoLight";
+  position: relative;
+}
+
+.modal-generic {
+  padding: 0 0 10px 0;
+}
+
+.job-title {
+  font-size: 2em;
+}
+
+.job-desc {
+  font-size: 1em;
+}
+
+.label {
+  margin-top: 20px;
+  padding: 10px 20px;
+  font-family: "Roboto";
+  background-color: #00A6DE;
+  color: white;
+}
+
+.list {
+  margin: 0;
+  padding: 0 20px;
+  list-style-type: none;
+  font-size: 0.8em;
+}
+
+.list li {
+  margin: 10px 0;
 }
